--- a/static/style.css
+++ b/static/style.css
@@ -5,3 +5,10 @@ img {
 hr { display: block; height: 5px;
     border: 0; border-top: 5px solid #ccc;
     margin: 1em 0; padding: 0; }
+.header {
+    background-color: rgb(202, 199, 199);
+    padding: 30px;
+    text-align: center;
+    font-size: 35px;
+    color: white;
+  }
